--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* Reset de Estilos */
 * {
     padding: 0;
     margin: 0;
@@ -7,39 +8,39 @@
 }
 
 body {
-    font-family: sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 a {
     text-decoration: none;
-    color: #fff;
+    color: #333;
 }
 
+/* Plano de Fundo do Corpo */
 body {
-    background-image: linear-gradient(to bottom right, rgb(183, 178, 202),rgb(117, 73, 103));
+    background-color: #f2f2f2; 
 }
 
 .container {
-  height: 180vh;
-  width: 100vw;
-  display: grid;
-  place-items: center;  
+    height: 100vh; 
+    display: grid;
+    place-items: center;
 }
 
 .calculator {
     position: relative;
-    height: auto;
-    width: auto;
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 0 30px rgb(13, 13, 5);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    background-color: #fff;
 }
 
+/* Botão de Alternância de Tema */
 .theme-toggler {
     position: absolute;
-    top: 30px;
-    right: 30px;
-    color: rgb(159, 159, 159);
+    top: 20px;
+    right: 20px;
+    color: #333;
     cursor: pointer;
     z-index: 1;
 }
@@ -54,61 +55,65 @@ body {
 
 .theme-toggler::before {
     content: '';
-    height: 30px;
-    width: 30px;
+    height: 24px;
+    width: 24px;
     position: absolute;
     top: 50%;
     transform: translate(-50%, -50%);
     border-radius: 50%;
-    background-color: rgb(13, 13, 13);
+    background-color: #333;
     z-index: -1;
 }
 
+/* Display da Calculadora */
 #display {
     margin: 0 10px;
-    height: 150px;
+    height: 100px;
     width: auto;
     max-width: 270px;
     display: flex;
     align-items: flex-end;
     justify-content: flex-end;
-    font-size: 30px;
-    margin-bottom: 20px;
+    font-size: 1.5em; 
+    margin-bottom: 10px; 
     overflow-x: scroll;
+    color: #333;
+    line-height: 1.5;
 }
 
 #display::-webkit-scrollbar {
-    display: block;
-    height: 3px;
+    display: none;
 }
 
+/* Botões */
 button {
-    height: 60px;
-    width: 60px;
+    height: 50px; 
+    width: 50px; 
     border: 0;
-    border-radius: 30px;
+    border-radius: 25px;
     margin: 5px;
-    font-size: 20px;
+    font-size: 1.2em; 
     cursor: pointer;
     transition: all 200ms ease;
 }
 
 button:hover {
-    transform: scale(1.1);
+    transform: scale(1.05);
 }
 
 button#equal {
-    height: 130px;
+    height: 100px;
+    font-weight: bold;
+    font-size: 1.5em;
 }
 
-/* light theme */
-
+/* Tema Claro */
 .calculator {
     background-color: #fff;
 }
 
 .calculator #display {
-    color: #0a1e23;
+    color: #333;
 }
 
 .calculator button#clear {
@@ -128,13 +133,12 @@ button#equal {
 
 .calculator button.btn-equal {
     background-color: #3c1e9e;
-    color: rgb(238, 234, 234);
+    color: #eee;
 }
 
-/* dark theme */
-
+/* Tema Escuro */
 .calculator.dark {
-    background-color: #071115;
+    background-color: #2d2d2d;
 }
 
 .calculator.dark #display {
@@ -142,12 +146,12 @@ button#equal {
 }
 
 .calculator.dark button#clear {
-background-color: #2d191e;
-color: #bd3740;
+    background-color: #4d3943;
+    color: #bd3740;
 }
 
 .calculator.dark button.btn-number {
-    background-color: #bcbbe4;
+    background-color: #849ca7;
     color: #060607;
 }
 
@@ -158,7 +162,5 @@ color: #bd3740;
 
 .calculator.dark button.btn-equal {
     background-color: #38b341;
-    color: #ffffff;
+    color: #fff;
 }
-
-      
